<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abbreviation_unit_milliseconds">%sms</string>
    <string name="abbreviation_unit_percent">%s%%</string>
    <string name="add">Add</string>
    <string name="add_language">Add language</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="button_default">Default</string>
    <string name="change_keyboard">Change keyboard</string>
    <string name="delete_swipe">Delete swipe</string>
    <string name="english_ime_name">Simple Keyboard</string>
    <string name="english_ime_settings">Simple Keyboard Settings</string>
    <string name="generic_language_layouts">%s keyboard layouts</string>
    <string name="hide_language_switch_key">Hide language switch key</string>
    <string name="hide_special_chars">Hide special characters</string>
    <string name="keyboard_color">Set custom keyboard color</string>
    <string name="keyboard_theme_dark">Material Dark</string>
    <string name="keyboard_theme_dark_border">Material Dark Border</string>
    <string name="keyboard_theme_light">Material Light</string>
    <string name="keyboard_theme_light_border">Material Light Border</string>
    <string name="keyboard_theme_system">System Default</string>
    <string name="keyboard_theme_system_border">System Default Border</string>
    <string name="label_pause_key">Pause</string>
    <string name="label_wait_key">Wait</string>
    <string name="locale_name_en_GB">English (UK)</string>
    <string name="locale_name_en_US">English (US)</string>
    <string name="locale_name_es_US">Spanish (US)</string>
    <string name="locale_name_hi_ZZ">Hinglish</string>
    <string name="locale_name_in_root_locale_hi_ZZ">Hinglish</string>
    <string name="locale_name_in_root_locale_sr_ZZ">Srpski</string>
    <string name="locale_name_sr_ZZ">Serbian (Latin)</string>
    <string name="matching_navbar_color">Use matching navigation bar color</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="pref_enable_ime_switch">Switch to other keyboards</string>
    <string name="prefs_key_longpress_timeout_settings">Key long press delay</string>
    <string name="prefs_keyboard_height_settings">Keyboard height</string>
    <string name="prefs_keypress_sound_volume_settings">Keypress sound volume</string>
    <string name="prefs_keypress_vibration_duration_settings">Keypress vibration duration</string>
    <string name="remove">Remove</string>
    <string name="remove_language">Remove language</string>
    <string name="select_language">Languages</string>
    <string name="settings_screen_appearance">Appearance</string>
    <string name="settings_screen_key_press">Key press</string>
    <string name="settings_screen_preferences">Preferences</string>
    <string name="settings_screen_theme">Theme</string>
    <string name="settings_system_default">System default</string>
    <string name="setup_message">Simple Keyboard is not enabled. Click OK to open Languages &amp; Input settings. You will need to select Simple Keyboard in your current keyboard to use it.</string>
    <string name="show_number_row">Show separate number row</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="space_swipe">Space swipe cursor move</string>
    <string name="subtype_bds">BDS</string>
    <string name="subtype_bijoy">Bijoy</string>
    <string name="subtype_compact">Compact</string>
    <string name="subtype_f">F</string>
    <string name="subtype_generic_layout" formatted="false">%s (%s)</string>
    <string name="subtype_q">Q</string>
    <string name="subtype_traditional">Traditional</string>
    <string name="symbols_sentence_terminators">.?!</string>
    <string name="symbols_word_separators">"\u0009 
 ()[]{}*&amp;&lt;>+=|.,;:!?/_\""</string>
    <string name="user_languages">Enabled keyboard languages</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
</resources>
