<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_screen_key_press"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:latin="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference android:persistent="true" android:title="@string/vibrate_on_keypress" android:key="vibrate_on" android:defaultValue="@bool/config_default_vibration_enabled" />
    <rkr.simplekeyboard.inputmethod.latin.settings.SeekBarDialogPreference android:title="@string/prefs_keypress_vibration_duration_settings" android:key="pref_vibration_duration_settings" android:dependency="vibrate_on" latin:maxValue="@integer/config_max_vibration_duration" />
    <CheckBoxPreference android:persistent="true" android:title="@string/sound_on_keypress" android:key="sound_on" android:defaultValue="@bool/config_default_sound_enabled" />
    <rkr.simplekeyboard.inputmethod.latin.settings.SeekBarDialogPreference android:title="@string/prefs_keypress_sound_volume_settings" android:key="pref_keypress_sound_volume" android:dependency="sound_on" latin:maxValue="100" />
    <CheckBoxPreference android:persistent="true" android:title="@string/popup_on_keypress" android:key="popup_on" android:defaultValue="@bool/config_default_key_preview_popup" />
    <rkr.simplekeyboard.inputmethod.latin.settings.SeekBarDialogPreference android:title="@string/prefs_key_longpress_timeout_settings" android:key="pref_key_longpress_timeout" latin:maxValue="@integer/config_max_longpress_timeout" latin:minValue="@integer/config_min_longpress_timeout" latin:stepValue="@integer/config_longpress_timeout_step" />
</PreferenceScreen>